[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/viruses/shootingFolderTab1.png" type="Texture" id=1]
[ext_resource path="res://assets/images/viruses/shootingFolderTab2.png" type="Texture" id=2]
[ext_resource path="res://scenes/bullets/virus/virusSendingPaper.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/viruses/shootingFolder.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/paperVirusDamage2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/paperVirusDamage.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 16 )

[node name="shootingFolder" type="Area2D"]
script = ExtResource( 4 )
scoreValue = 100
maxHealth = 6.0
HeartDropChance = 75
projectile = ExtResource( 3 )
damageSounds = [ ExtResource( 6 ), ExtResource( 5 ) ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="tab1" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="tab2" type="Sprite" parent="."]
position = Vector2( 2, 3 )
z_index = 2
texture = ExtResource( 2 )

[node name="movemente" type="Tween" parent="."]

[node name="shootingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="tween_all_completed" from="movemente" to="." method="_on_movemente_tween_all_completed"]
[connection signal="timeout" from="shootingTimer" to="." method="_on_shootingTimer_timeout"]
